<resources>
    <string name="app_name">Botox</string>
    <string name="login_as_patient">Login as Patient</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="botox_App">Botox App</string>
    <string name="i_am_provider">I\'m provider</string>
    <string name="provider">Provider</string>
    <string name="provider_name">Provider Name</string>
    <string name="patient_book_an_appointment">Book an appointment</string>
    <string name="patient_appointments">Patient Appointments</string>
    <string name="register">Register</string>
    <string name="schedule">Schedule</string>
    <string name="log_in">Log in</string>
    <string name="mbbs">MBBS</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="thank_you">Thank You</string>
    <string name="thank_message">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Ut pretium pretium tempor.</string>
    <string name="select_image">Select Image</string>
    <string name="takepicture">Take Picture</string>
    <string name="opengallery">Open Gallery</string>
    <string name="medical_history">Medical History</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bds">BDS</string>
    <string name="other">Other</string>
    <string name="next">Next</string>

    <string name="address">Address</string>
    <string name="all_field_are_mandatory">All fields are mandatory</string>
    <string name="model_of_transport">Model of Transport</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="gdcno">GDCNO</string>
    <string name="gmcno">GMCNO</string>
    <string name="cv">CV</string>
    <string name="proof">Proof</string>
    <string name="photo_in">Photo IN</string>
    <string name="crb_check">CRB Check</string>
    <string name="qualification_certificate">Qualification Certificate</string>
    <string name="enter_your_postcode_here">Enter your postcode here</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone</string>
    <string name="zipcode">Zipcode</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_valid_phone_number">Enter Valid Phone Number</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_gdcno">Enter GDCNO</string>
    <string name="enter_gmcno">Enter GMCNO</string>
    <string name="enter_mode_of_transport">Enter Mode of Transport</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="registering">Registering...</string>
    <string name="processing">Processing...</string>
    <string name="sign_in">Sing In....</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="error">Error</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="select_you_working_time">Select Your Working Time</string>
    <string name="my_appointment">My appointments</string>
    <string name="profile">Profile</string>
    <string name="document_status">Document status: Check</string>
    <string name="my_appointments">My appointments</string>
    <string name="my_payments">My payments</string>
    <string name="qualification">Qualifications</string>
    <string name="uploads_documents">Uploads Education Documents</string>
    <string name="uploads_proof_documents">Uploads Documents</string>
    <string name="provider_full_name">Provider Full Name</string>
    <string name="select_your_document">Select Your Document</string>
    <string name="enter_your_postcode">Enter your postcode</string>
    <string name="sign_up_as_doctor">Sign Up as Doctor</string>
    <string name="logout">Logout</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="you_did_not_specify">You Did Not Specify Education</string>
    <string name="katrine">Katrine</string>
    <string name="address_home">UK,London</string>
    <string name="phone_no">4444-321</string>
    <string name="email_address">katrine@gamil.com</string>
    <string name="password_change">change</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment">Payment</string>
    <string name="available_to_work">Available to work</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="available_to_call">Available to call</string>
    <string name="from">From</string>
    <string name="select_your_qualification">Select Your Qualification</string>
    <string name="to">To</string>
    <string name="set_distance">Set Distance</string>
    <string name="distance_you_ready_to_cover">Distance you are ready to cover</string>
    <string name="distance">Distance In Km</string>
    <string name="confirmation_one">I confirm that I am able to work in the UK</string>
    <string name="confirmation_two">I confirm that I will be self employed and(our name) is not the employer</string>
    <string name="confirmation_three">I confirm that the responsibility of the patient lies with me and not(our name)</string>
    <string name="monday">Monday</string>
    <string name="working_condition">Working condition</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="working_time">Working time</string>
    <string name="saturday">Saturday</string>
    <string name="treatment_area">Treatment Areas:</string>
    <string name="treatment">Treatment:</string>
    <string name="no_clinician_available">No Clinician Available</string>
    <string name="choose_another_date">Choose Another Date</string>
    <string name="sunday">Sunday</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="notes_to_clinician">Note to clinician</string>
    <string name="set_time">Set time</string>
    <string name="change_time">Change Time</string>
    <string name="submit">Submit</string>
    <string name="patient_name">Patient Name</string>
    <string name="appointment_date">Appointmnet date</string>
    <string name="new_appointment">New Appointment</string>
    <string name="old_appointment">Old Appointment</string>
    <string name="what_do_you_want_to_treat">What do you want to treat?</string>
    <string name="choose_area">Choose Area</string>
    <string name="area_value">$0</string>
    <string name="additional_setting">Additional settings</string>
    <string name="faq">FAQ</string>
    <string name="notifications">Notifications</string>
    <string name="customer_support">Customer Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="patient_profile">Profile</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="confirm">Confirm</string>
    <string name="license_checked">License Checked</string>
    <string name="patient_month">Patient/Month</string>
    <string name="all_patients">All Patients</string>
    <string name="qualifications">Qualifications</string>
    <string name="consultation">Consultation</string>
    <string name="provider_profile">Provider Profile</string>
    <string name="license_unchecked">License Unchecked</string>
    <string name="find_your_location">Find your location</string>
    <string name="login_with_email">Log in with email</string>
    <string name="patient_login">Patient Login</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="clinician_name">Clinician Name:</string>
    <string name="give_the_answer">Please Answer to all questions</string>
    <string name="cardinfo">Card Info</string>
    <string name="name_of_card">Name Of Card</string>
    <string name="card_number">Card Number</string>
    <string name="ccv_number">CCV Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="billing_postcode">Billing Postcode</string>
    <string name="scan_card">Scan Card</string>
    <string name="scan_card_by_camera">Scan Card Via The Camera</string>
    <string name="pay">Pay</string>
    <string name="payment_detail">Payment Details</string>
    <string name="please_take_a_portrait_photo">Please take a portrait photograph of your face</string>
    <string name="keep_your_face">Keep your face as straight as possible, avoid tilting face.</string>
    <string name="do_not_smile_in_picture">Do not smile in picture</string>
    <string name="go_to_camera">GO TO CAMERA</string>
    <string name="are_you_a">Are you a:</string>
    <string name="doctor">Doctor</string>
    <string name="dentist">Dentist</string>
    <string name="nurse">Nurse</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="appointment_date">Date</string>
    <string name="patient_appointment_time">Time</string>
</resources>
